# do_svyazy

./: .gitignore  Cargo.toml  README.md  build_stylance.sh
.github/ISSUE_TEMPLATE/: add.md  fix.md
.github/workflows/ISSUE_TEMPLATE/: add_back.md  add_front.md  fix_back.md  fix_front.md
app/: Cargo.toml
app/src/: bulid.rs  lib.rs  main.module.scss
app/src/components/: mod.rs
app/src/components/button/: component.rs
app/src/components/input/: component.rs  input.module.scss
app/src/components/tag/: component.rs
app/src/pages/: mod.rs
app/src/pages/friends/: page.rs
app/src/pages/home/: home.module.scss  page.rs
app/src/pages/login/: handlers.rs  login.module.scss  page.rs
app/src/pages/register/: handlers.rs  page.rs  register.module.scss
app/src/pages/tags/: handlers.rs  page.rs  tags.module.scss
db/: Dockerfile  docker-compose.yml
db/init-scripts/: drop_tables.sql  init.sql  insert_default_tags.sql
server/: Cargo.toml
server/src/: auth.rs  config.rs  handlers.rs  lib.rs  main.rs  model.rs  models.rs
share/: Cargo.toml
share/src/: lib.rs
style/: main.scss
