[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
stylance = "0.7.1"
share = { path = "../share" }
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.145"
web-sys = { version = "0.3.82", features = ["HtmlDocument", "Window"] }
leptos-use = { version = "0.16.3" }
wasm-bindgen-futures = "0.4.55"
dotenv = "0.15.0"

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]

