[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
share = { path = "../share" }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
bcrypt = "0.17.1"
serde = "1.0.228"
